Fix MSI and NSI installer for dumps enabling
- Fix problems related to Windows Registry Redirection, leading to
invalid creation of registries under WOW6432 node

--- a/src/win32/wazuh-installer.wxs
+++ b/src/win32/wazuh-installer.wxs
@@ -53,7 +53,7 @@
         </Property>
         
         <Binary Id="InstallerScripts" SourceFile="InstallerScripts.vbs" />
-        <Binary Id="DumpsSetup" SourceFile="DumpsSetupScripts.vbs" />
+        <Binary Id="DumpsSetupScripts" SourceFile="DumpsSetupScripts.vbs" />
 
         <Property Id="APPLICATIONFOLDER">
             <RegistrySearch Id="WazuhInstallDirProperty" Type="raw" Root="HKLM" Key="Software\[Manufacturer]\[ProductName]" Name="WazuhInstallDir" />
@@ -96,8 +96,8 @@
         <CustomAction Id="SetCustomActionDataValue" Return="check" Property="CustomAction_InstallerScripts" Value="&quot;[APPLICATIONFOLDER]&quot;,&quot;[WAZUH_MANAGER]&quot;,&quot;[WAZUH_MANAGER_PORT]&quot;,&quot;[WAZUH_PROTOCOL]&quot;,&quot;[NOTIFY_TIME]&quot;,&quot;[WAZUH_REGISTRATION_SERVER]&quot;,&quot;[WAZUH_REGISTRATION_PORT]&quot;,&quot;[WAZUH_REGISTRATION_PASSWORD]&quot;,&quot;[WAZUH_KEEP_ALIVE_INTERVAL]&quot;,&quot;[WAZUH_TIME_RECONNECT]&quot;,&quot;[WAZUH_REGISTRATION_CA]&quot;,&quot;[WAZUH_REGISTRATION_CERTIFICATE]&quot;,&quot;[WAZUH_REGISTRATION_KEY]&quot;,&quot;[WAZUH_AGENT_NAME]&quot;,&quot;[WAZUH_AGENT_GROUP]&quot;,&quot;[ENROLLMENT_DELAY]&quot;" />
         <CustomAction Id="CustomAction_InstallerScripts" BinaryKey="InstallerScripts" VBScriptCall="config" Return="check" Execute="commit" Impersonate="no"/>
 
-        <CustomAction Id="SetDumpsDirs" Return="check" Property="CustomAction_DumpsSetup" Value="&quot;[APPLICATIONFOLDER]&quot;|&quot;[WAZUH_EXECUTABLES]&quot;" />
-        <CustomAction Id="CustomAction_DumpsSetup" BinaryKey="DumpsSetup" VBScriptCall="EnableDumps" Return="check" Execute="commit" Impersonate="no"/>
+        <CustomAction Id="SetDumpsDirs" Return="check" Property="CustomAction_DumpsSetup" Value="&quot;[APPLICATIONFOLDER]|[WAZUH_EXECUTABLES]&quot;" />
+        <CustomAction Id="CustomAction_DumpsSetup" BinaryKey="DumpsSetupScripts" VBScriptCall="EnableDumps" Return="check" Execute="commit" Impersonate="no"  />
 
         <!-- Explicitely stopping and deleting the OSSEC service to install new Wazuh service -->
         <CustomAction Id="StopOssecService" Directory="APPLICATIONFOLDER" ExeCommand="NET STOP OssecSvc" Execute="deferred" Impersonate="no" Return="ignore" />
@@ -133,7 +133,8 @@
             <!-- Install functions -->
             <Custom Action="SetCustomActionDataValue" After="InstallInitialize">NOT Installed</Custom>
             <Custom Action="CustomAction_InstallerScripts" After="SetCustomActionDataValue">NOT Installed</Custom>
-            <Custom Action="CustomAction_DumpsSetup" After="CustomAction_InstallerScripts">NOT Installed</Custom>
+			<Custom Action="SetDumpsDirs" After="SetCustomActionDataValue">NOT Installed</Custom>
+            <Custom Action="CustomAction_DumpsSetup" After="SetDumpsDirs">NOT Installed</Custom>
 
             <!-- Stop the service as soon as possible on uninstall, and only on uninstall, in order to unlock the files and folders that must be deleted. -->
             <Custom Action="SetRemoveAllDataValue" Before="InstallFinalize">(NOT UPGRADINGPRODUCTCODE) AND (REMOVE="ALL")</Custom>
